--- a/src/styles/global/tokens.scss
+++ b/src/styles/global/tokens.scss
@@ -199,6 +199,7 @@ body {
   }
 
   // Z-INDEX
+  --fs-z-index-below                   : -1;
   --fs-z-index-default                 : 0;
   --fs-z-index-top                     : 1;
   --fs-z-index-high                    : 2;
